# autotank

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
gazebo/world/: autotank_world.sdf
include/core/: base_task.h  broker.h  message_queue.h  msg.h  scoped_timer.h  state_manager.h  task.h
include/csc/control/motion_control/: diff_drive.h  diff_drive_task.h  motion_control_task.h
include/csc/localization/: localization_task.h
include/csc/mapping/: mapping_task.h
include/csc/navigation/: navigation_task.h
include/csc/safety_monitor/: safety_monitor_task.h
include/csc/sensors/imu/: imu.h  imu_task.h
include/csc/sensors/lidar/: lidar.h  lidar_task.h
include/csc/sensors/odom/: odom.h  odom_task.h
include/csc/services/map_service/: map_service.h
include/msg/: cmdvel_msg.h  header.h  imu_msg.h  lidar_msg.h  localization_estimate_msg.h  msg_variant_types.h  odom_msg.h  safety_alert_msg.h  waypoint_msg.h
include/msg/common_types/: header.h  pose.h  twist.h
models/: robot_example.py
src/: main.cpp
src/core/: base_task.cpp  state_manager.cpp  task.cpp
src/csc/control/motion_control/: diff_drive_task.cpp  motion_control_task.cpp
src/csc/localization/: localization_task.cpp
src/csc/mapping/: mapping_task.cpp
src/csc/navigation/: navigation_task.cpp
src/csc/safety_monitor/: safety_monitor_task.cpp
src/csc/sensors/imu/: imu_task.cpp
src/csc/sensors/lidar/: lidar_task.cpp
src/csc/sensors/odom/: odom_task.cpp
src/csc/services/map_service/: map_service.cpp
src/hal/: gazebo_helpers.h  gazebo_imu.cpp  gazebo_lidar.cpp  gazebo_odom.cpp
src/hal/gazebo/: gazebo_diff_drive.cpp  gazebo_helpers.h  gazebo_imu.cpp  gazebo_lidar.cpp  gazebo_odom.cpp
src/motors/: dc_motor.cpp  dc_motor.h
test/: CMakeLists.txt
test/csc/control/motion_control/: CMakeLists.txt  mock_diff_drive.cpp  test_motion_control_task.cpp
test/csc/localization/: CMakeLists.txt  test_localization_task.cpp
test/csc/mapping/: CMakeLists.txt  test_mapping_task.cpp
test/csc/navigation/: CMakeLists.txt  test_navigation_task.cpp
test/csc/safety_monitor/: CMakeLists.txt  test_safety_monitor_task.cpp
test/csc/services/map_service/: CMakeLists.txt  test_map_service.cpp
